[package]
name = "pi_host"
version = "0.1.0"
authors = ["Robert Turner Jr <georob23@gmail.com>"]
edition = "2018"

[dependencies]
notify = "4.0.0"
wasmi = "0.4.1"
ctrlc = { version = "3.0", features = ["termination"] }

[target .'cfg(any(target_arch = "arm", target_arch = "armv7"))'.dependencies]
blinkt = "0.4.0"